# synthetic-data-generator

./: .gitignore  README.md  pyproject.toml
docs/: README.md  expected_patterns.md  getting_started.md  scenario_expected_actual.md
simulation/: __init__.py  behaviour_engine.py  engine.py
sql/: 01_create_star_schema.sql  02_load_from_csv.sql  03_create_kpi_views.sql  04_kpi_pack.sql  README.md
